--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,11 @@ install-sh
 ltmain.sh
 m4
 missing
+.deps
+Makefile
+config.h
+config.log
+config.status
+libtool
+mmc-check-password-*.tar.gz
+stamp-h1
