--- a/mmc-password-helper.in
+++ b/mmc-password-helper.in
@@ -33,6 +33,9 @@ import sys
 import re
 import string
 import os
+import ConfigParser
+
+CONF = "@sysconfdir@/mmc-password-helper.ini"
 
 verbose = False
 pass_length = 8
@@ -73,54 +76,64 @@ def check_pass(password):
         debug("the password must be %s or longer" % pass_length)
         return False
 
+    config = ConfigParser.RawConfigParser()
+    config.read(CONF)
+
     reg_num = re.compile(".*[0-9].*")
     reg_up = re.compile(".*[A-Z].*")
     reg_down = re.compile(".*[a-z].*")
 
-    if not reg_num.match(password):
-        debug("the password must contain at least one number")
-        return False
-
-    if not reg_up.match(password):
-        debug("the password must contain at least one upper case character")
-        return False
-
-    if not reg_down.match(password):
-        debug("the password must contain at least one lower case character")
-        return False
-
-    found_punct = False
-    for punct in string.punctuation:
-        if password.count(punct):
-            found_punct = True
-
-    if not found_punct:
-        debug("the password must contain at least one special character")
-        return False
-
-    for char in password:
-        if password.count(char) > 1:
-            debug("the password must not contain the same character twice")
+    if config.getboolean('main', 'must_one_number'):
+        if not reg_num.match(password):
+            debug("the password must contain at least one number")
             return False
-    try:
-        import cracklib
-    except ImportError:
-        # if we do not find python-cracklib, bypass the test
-        debug("python-cracklib not found. Install it for a better password check")
-        debug("password accepted")
-        return True
 
-    try:
-        if password.encode('utf-8') == cracklib.VeryFascistCheck(password.encode('utf-8')):
+    if config.getboolean('main', 'must_one_upper_case'):
+        if not reg_up.match(password):
+            debug("the password must contain at least one upper case character")
+            return False
+
+    if config.getboolean('main', 'must_one_lower_case'):
+        if not reg_down.match(password):
+            debug("the password must contain at least one lower case character")
+            return False
+
+    if config.getboolean('main', 'must_one_special'):
+        found_punct = False
+        for punct in string.punctuation:
+            if password.count(punct):
+                found_punct = True
+
+        if not found_punct:
+            debug("the password must contain at least one special character")
+            return False
+
+    if config.getint('main', 'same_char_max') > 0:
+        for char in password:
+            if password.count(char) > config.getint('main', 'same_char_max'):
+                debug("the password must not contain the same character twice")
+                return False
+
+    if config.getboolean('main', 'use_cracklib'):
+        try:
+            import cracklib
+        except ImportError:
+            # if we do not find python-cracklib, bypass the test
+            debug("python-cracklib not found. Install it for a better password check")
             debug("password accepted")
             return True
-        else:
-            debug("password NOT accepted")
-    except ValueError, reason:
-        if verbose:
-            debug("password NOT accepted: %s" % reason)
-        return False
-    return False
+        try:
+            if password.encode('utf-8') == cracklib.VeryFascistCheck(password.encode('utf-8')):
+                debug("password accepted")
+                return True
+            else:
+                debug("password NOT accepted")
+        except ValueError, reason:
+            if verbose:
+                debug("password NOT accepted: %s" % reason)
+            return False
+
+    return True
 
 def usage():
     print "mmc-password-helper [--help -h|--verbose -v|--newpass -n|--check -c|--length -l|--file -f]"
