List special chars in the configuration file

--- a/mmc-password-helper.ini
+++ b/mmc-password-helper.ini
@@ -6,6 +6,7 @@ must_one_upper_case = yes
 # The password must contain at least one lower case character
 must_one_lower_case = yes
 # The password must contain at least one special character
+# specials chars: #$%&+./:=?@{}
 must_one_special = yes
 # The password must not contain multiple same characters
 same_char_max = 3
