Make the log messages look better

--- a/mmc-password-helper.in
+++ b/mmc-password-helper.in
@@ -47,9 +47,13 @@ userdn = None
 
 special_characters = "#$%&+./:=?@{}"
 
-def debug(string, force=False):
+def error(string, force=False):
     if verbose or force:
         sys.stderr.write(string +"\n")
+
+def log(string):
+    if verbose:
+        sys.stdout.write(string +"\n")
 
 def generate_new_pass():
     while True:
@@ -59,7 +63,7 @@ def generate_new_pass():
         try:
             passtry = passtry.replace( passtry[random.randrange(len(passtry))], special_characters[random.randrange(len(special_characters))])
             if check_pass(passtry):
-                debug("generated password: " + passtry)
+                log("Generated password: " + passtry)
                 return passtry
         except:
             pass
@@ -69,14 +73,17 @@ def check_pass(password):
     try:
         password = password.decode('utf-8')
     except UnicodeEncodeError:
-        sys.stderr.write('Password must be an UTF-8 string')
+        log('The password must be an UTF-8 string')
         return False
 
     if len(password) < pass_length:
-        debug("the password must be %s or longer" % pass_length)
+        log("The password length must be %s or longer" % pass_length)
         return False
 
     config = ConfigParser.RawConfigParser()
+    if not os.path.exists(CONF):
+        error("The configuration file %s doesn't exists" % CONF, True)
+        return False
     config.read(CONF)
 
     reg_num = re.compile(".*[0-9].*")
@@ -85,17 +92,17 @@ def check_pass(password):
 
     if config.getboolean('main', 'must_one_number'):
         if not reg_num.match(password):
-            debug("the password must contain at least one number")
+            log("The password must contain at least one number")
             return False
 
     if config.getboolean('main', 'must_one_upper_case'):
         if not reg_up.match(password):
-            debug("the password must contain at least one upper case character")
+            log("The password must contain at least one upper case character")
             return False
 
     if config.getboolean('main', 'must_one_lower_case'):
         if not reg_down.match(password):
-            debug("the password must contain at least one lower case character")
+            log("The password must contain at least one lower case character")
             return False
 
     if config.getboolean('main', 'must_one_special'):
@@ -105,13 +112,13 @@ def check_pass(password):
                 found_punct = True
 
         if not found_punct:
-            debug("the password must contain at least one special character")
+            log("The password must contain at least one special character: #$%&+./:=?@{}")
             return False
 
     if config.getint('main', 'same_char_max') > 0:
         for char in password:
             if password.count(char) > config.getint('main', 'same_char_max'):
-                debug("the password must not contain the same character twice")
+                log("The password must not contain the same character %s times" % config.getint('main', 'same_char_max'))
                 return False
 
     if config.getboolean('main', 'use_cracklib'):
@@ -119,18 +126,16 @@ def check_pass(password):
             import cracklib
         except ImportError:
             # if we do not find python-cracklib, bypass the test
-            debug("python-cracklib not found. Install it for a better password check")
-            debug("password accepted")
+            error("python-cracklib not found. Install it for a better password check")
             return True
         try:
             if password.encode('utf-8') == cracklib.VeryFascistCheck(password.encode('utf-8')):
-                debug("password accepted")
                 return True
             else:
-                debug("password NOT accepted")
+                log("Password not accepted by cracklib")
         except ValueError, reason:
             if verbose:
-                debug("password NOT accepted: %s" % reason)
+                log("Password not accepted: %s" % reason)
             return False
 
     return True
@@ -140,7 +145,7 @@ def usage():
 
 if __name__ == '__main__':
     try:
-        opts, args = getopt.getopt(sys.argv[1:], "hvncl:f:u:", ["help", "verbose","newpass", "check", "length", "file", "user"])
+        opts, args = getopt.getopt(sys.argv[1:], "hvncl:f:u:", ["help", "verbose", "newpass", "check", "length", "file", "user"])
     except getopt.GetoptError, err:
         print str(err)
         sys.exit(1)
@@ -152,14 +157,14 @@ if __name__ == '__main__':
             sys.exit(1)
         elif o in ("-l","--length"):
             if not a.isdigit():
-                debug("the length must be integer")
+                error("The length must be integer", True)
                 sys.exit(1)
             pass_length = int(a)
             if pass_length < 6:
-                debug("the password can be shorter than 6", True)
+                error("The password can't be shorter than 6", True)
                 sys.exit(1)
             if pass_length > 14:
-                debug("the password can't be longer than 14", True)
+                error("The password can't be longer than 14", True)
                 sys.exit(1)
         elif o in ("-n", "--newpass"):
             generate_pass = True
@@ -170,14 +175,14 @@ if __name__ == '__main__':
         elif o in ("-f", "--file"):
             read_from_file = True
             if not os.path.isfile(a):
-                debug("the provided file is invalid")
+                error("The provided file is invalid", True)
                 sys.exit(1)
             file = a
         else:
             assert False, "unhandled option"
     
     if must_check_pass and generate_pass:
-        debug("you cannot generate pass and check at the same time")
+        error("You cannot generate a password and check it at the same time", True)
         sys.exit(1)
     
     if must_check_pass:
