Don't use a default length on password quality check

--- a/mmc-password-helper.in
+++ b/mmc-password-helper.in
@@ -38,7 +38,7 @@ import ConfigParser
 CONF = "@sysconfdir@/mmc-password-helper.ini"
 
 verbose = False
-pass_length = 8
+pass_length = 0
 generate_pass = False
 must_check_pass = False
 read_from_file = False
@@ -56,6 +56,11 @@ def log(string):
         sys.stdout.write(string +"\n")
 
 def generate_new_pass():
+
+    global pass_length
+
+    if pass_length == 0:
+        pass_length = 8
     while True:
         # Regenerate the password until check_pass() says it is a safe pass
         pass_size = 3+pass_length
